--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,6 +27,8 @@ target 'chate' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+  
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
 
 
   target 'chateTests' do
