--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
     "apollo-boost": "^0.4.3",
     "apollo-link-ws": "^1.0.18",
     "graphql": "^14.4.2",
