--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
+    "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "apollo-boost": "^0.4.3",
     "apollo-link-ws": "^1.0.18",
     "graphql": "^14.4.2",
@@ -20,6 +21,8 @@
     "react-native-contacts": "^5.0.2",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-crop-picker": "^0.25.0",
+    "react-native-image-picker": "^1.0.1",
     "react-native-ionicons": "^4.6.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-phone-input": "^0.2.2",
