--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,9 @@
-platform :ios, '9.0'
+platform :ios, '12.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+
+
+install! 'cocoapods',
+:deterministic_uuids => false
 
 target 'chate' do
   # Pods for chate
@@ -28,7 +32,6 @@ target 'chate' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
   
-  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
 
 
   target 'chateTests' do
