--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "@react-native-community/async-storage": "^1.6.1",
     "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "apollo-boost": "^0.4.3",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.3",
+    "apollo-link-http": "^1.5.15",
     "apollo-link-ws": "^1.0.18",
     "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
     "native-base": "^2.13.4",
     "react": "16.8.6",
     "react-apollo": "^2.5.8",
